--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exec-promise",
+  "name": "simple-exec-promise",
   "version": "1.0.0",
   "description": "Small promise wrapper around child_process.exec",
   "main": "index.js",
@@ -7,10 +7,18 @@
     "node": ">= 0.12.18"
   },
   "keywords": [
+    "simple",
     "exec",
     "promise",
     "child_process"
   ],
   "author": "Phillip Gibson <gibson.phillip.j@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renolc/simple-exec-promise.git"
+  },
+  "bugs": {
+    "url": "https://github.com/renolc/simple-exec-promise/issues"
+  }
 }
